All pages fixed for desktop only. Problem :footer varies with navba and not responsiver

--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -30,7 +30,7 @@
   position: absolute;
   text-align: center;
   top: 20%;
-  left:16%;
+  left:26%;
 }
 body{
     background: #093028;  /* fallback for old browsers */
