--- a/app/assets/stylesheets/education.css.scss
+++ b/app/assets/stylesheets/education.css.scss
@@ -30,11 +30,12 @@
   position: absolute;
   text-align: center;
   top: 20%;
-  left:20%;
+  left:30%;
 }
 body{
-  background: #16222A;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #3A6073, #16222A);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #3A6073, #16222A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  background: #c94b4b;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #4b134f, #c94b4b);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #4b134f, #c94b4b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
 }
+
